[package]
name = "bacup"
version = "0.1.10"
description = "An easy-to-use backup tool designed for servers."
readme = "README.md"
authors = ["Paolo Galeone <me@pgaleone.eu>"]
edition = "2018"
repository = "https://github.com/galeone/bacup"
default-run = "bacup"
license = "Apache-2.0"
keywords = ["backup", "ssh", "server", "easy-to-use"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.26"
dyn-clone = "1.0.13"
futures = "0.3.28"
glob = "0.3.1"
log = "0.4.20"
regex = "1.9.4"
scopeguard = "1.2.0"
serde = { version = "1.0.188", features = ["derive"] }
shellexpand = "3.1.0"
stderrlog = "0.5.4"
structopt = "0.3.26"
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
url = { version = "2.4.1", features = ["serde"] }
which = "4.4.0"
aws-config = "0.56.1"
aws-credential-types = { version = "0.56.1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "0.30.0"
async-compression = { version = "0.4.1", default-features = false, features = ["tokio", "gzip"] }
tokio-tar = "0.3.1"
tokio-cron-scheduler = "0.9.4"
cron = "0.12.0"
uuid = { version = "1.4.1", features = ["v4"] }
aws-types = "0.56.1"
