[package]
name = "bacup"
version = "0.1.11"
description = "An easy-to-use backup tool designed for servers."
readme = "README.md"
authors = ["Paolo Galeone <me@pgaleone.eu>"]
edition = "2018"
repository = "https://github.com/galeone/bacup"
default-run = "bacup"
license = "Apache-2.0"
keywords = ["backup", "ssh", "server", "easy-to-use"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
chrono = "0.4.35"
dyn-clone = "1.0.17"
futures = "0.3.30"
glob = "0.3.1"
log = "0.4.21"
regex = "1.10.3"
scopeguard = "1.2.0"
serde = { version = "1.0.197", features = ["derive"] }
shellexpand = "3.1.0"
stderrlog = "0.6.0"
structopt = "0.3.26"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
url = { version = "2.5.0", features = ["serde"] }
which = "6.0.0"
aws-config = "1.1.8"
aws-credential-types = { version = "1.1.8", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.19.1"
async-compression = { version = "0.4.6", default-features = false, features = ["tokio", "gzip"] }
tokio-tar = "0.3.1"
tokio-cron-scheduler = "0.10.0"
cron = "0.12.1"
uuid = { version = "1.7.0", features = ["v4"] }
aws-types = "1.1.8"
