[package]
name = "bacup"
version = "0.1.16"
description = "An easy-to-use backup tool designed for servers."
readme = "README.md"
authors = ["Paolo Galeone <me@pgaleone.eu>"]
edition = "2018"
repository = "https://github.com/galeone/bacup"
default-run = "bacup"
license = "Apache-2.0"
keywords = ["backup", "ssh", "server", "easy-to-use"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.41"
dyn-clone = "1.0.19"
futures = "0.3.31"
glob = "0.3.2"
log = "0.4.27"
regex = "1.11.1"
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
stderrlog = "0.6.0"
structopt = "0.3.26"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
url = { version = "2.5.4", features = ["serde"] }
which = "8.0.0"
aws-config = "1.6.3"
aws-credential-types = { version = "1.2.3", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.91.0"
async-compression = { version = "0.4.23", default-features = false, features = ["tokio", "gzip"] }
tokio-tar = "0.3.1"
tokio-cron-scheduler = "0.14.0"
cron = "0.15.0"
uuid = { version = "1.17.0", features = ["v4"] }
aws-types = "1.3.7"
croner = "2.1.0"
